--- a/sr_cnip_ad.conf
+++ b/sr_cnip_ad.conf
@@ -1,4 +1,4 @@
-# Best Shadowrocket Rules (https://github.com/Johnshall/Shadowrocket-ADBlock-Rules-Forever)
+# Best Shadowrocket Rules (https://github.com/N04LE7/Public)
 # by Moshel and Johnshall
 # build time: UTC 2025-02-16 23:01:59
 
@@ -36108,4 +36108,4 @@ FINAL,proxy
 [MITM]
 hostname = *.google.cn,*.googlevideo.com
 
-# Made with Love from https://github.com/Johnshall/Shadowrocket-ADBlock-Rules-Forever
+# Made with Love from https://github.com/N04LE7/Public
